<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Alert My Friends</string>
    <string name="menu_settings">Settings</string>
    <string name="delete">Delete</string>
    <string name="menu_add">Add Friend</string>
    <string name="menu_add_contacts">Add Friends</string>
    <string name="menu_help">Help</string>
    <string name="enable_gps">Enable GPS?</string>
    <string name="message_enable_gps">Please enable the GPS in location settings for accurate location detection</string>
    <string name="enable_location">Enable Location Services?</string>
    <string name="message_enable_location">It looks like all your location services are disabled or unavailable, do you want to try enabling them in Settings?</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="sms_text">"I need help! I'm at\n%1$s\n%2$s"</string>
    <string name="sms_success_toast">Sent alert SMS to selected contacts!</string>
    <string name="sms_error_toast">SMS send failed</string>
    <string name="no_contacts_toast">Please add some friends before you can send alerts</string>
    <string name="empty_list">"Press 'Add Friend' to add friends you want to alert in an emergency situation with a SMS containing your location"</string>
    <string name="pref_siren">Siren on alert</string>
    <string name="pref_shake">Shake to alert</string>
    <string name="title_activity_settings">Settings</string>
    <string name="invalid_contact">Contact does not have a phone number</string>
    <string name="title_activity_contacts">Add Friends</string>
    <string name="coordinates">Coordinates</string>
    <string name="address">Address</string>
    <string name="alert_button">Alert Button</string>
    <string name="warning">Warning: Pressing the button above will send a SMS with your location to your selected friends</string>
    <string name="title_activity_map">Current Location</string>
    <string name="current_location">Current Location</string>
    <string name="show_map">Show Map</string>

</resources>